# lab-05

./: README.md
.github/workflows/: main.yml
lab-05/: CMakeLists.txt
lab-05/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  testing
lab-05/_build/banking/: Makefile  cmake_install.cmake
lab-05/_build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab-05/_build/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab-05/_build/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab-05/banking/: CMakeCache.txt  CMakeLists.txt
lab-05/banking/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
lab-05/tests/: testing.cpp
